# mti-oaip-lectures

./: .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  gh-pages.yml
docs/: index.md
docs/labs/: index.md
docs/practice/: cheatsheet.md  index.md  practice.md  version-control.md
docs/tickets/: index.md
docs/topics/01-algorithm-basics/: index.md  lecture-01-basics.md  lecture-02-constructs.md  lecture-03-logic.md
docs/topics/02-languages-and-methods/: index.md  lecture-01-languages.md  lecture-02-methods.md
docs/topics/03-python-basics/: index.md  lecture-01-syntax-types.md  lecture-02-control-flow-io.md  lecture-03-collections.md  lecture-04-encodings-bytes.md
labs/: index.html
practice/: index.html
practice/cheatsheet/: index.html
practice/practice/: index.html
practice/version-control/: index.html
search/: search_index.json
tickets/: index.html
topics/01-algorithm-basics/: index.html
topics/02-languages-and-methods/: index.html
topics/03-python-basics/: index.html
topics/04-procedures-and-files/: index.html
topics/05-libraries-and-modules/: index.html
topics/06-oop-principles/: index.html
topics/07-ide-vscode/: index.html
topics/08-app-development-stages/: index.html
topics/09-class-hierarchies/: index.html
topics/10-standard-modules/: index.html
topics/11-application-development/: index.html
topics/12-code-quality-and-testing/: index.html
topics/13-golang-basics/: index.html
topics/14-golang-advanced/: index.html
(+113 files in other folders)
