[project]
name = "mti-oaip-lectures"
version = "0.1.0"
description = "Курс «Основы алгоритмизации и программирования» — материалы лекций и сайт MkDocs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.1",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
]

[tool.uv]
package = false
